Keep track of workspace java files